# bapid

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  WORKSPACE  cli.py  compile  ctl.py  dbg  e  main.cpp  refresh  run  script_target
dev_scripts/: dbg  refresh  run  run_tests  script_target
examples/: BUILD.bazel  grpc_greeter.cpp  v8.cpp
if/: BUILD.bazel  bapid.proto  compile  filter_files.bzl  main.cpp
if/if/: bapid.grpc.pb.cc  bapid.grpc.pb.h  bapid.pb.cc  bapid.pb.h  bapid_mock.grpc.pb.h
src/: BUILD.bazel  arrow.cpp  arrow.h  bapid.cpp  bapid.h  bapid_main.cpp  bapid_main.h  bapid_server.cpp  bapid_server.h  http_server.cpp  http_server.h
src/common/: BUILD.bazel  README.md  rpc_runtime.cpp  rpc_runtime.h  rpc_server.cpp  rpc_server.h  server_base.h  service_runtime.cpp  service_runtime.h  service_runtime.hpp
src/if/: bapid.grpc.pb.cc  bapid.grpc.pb.h  bapid.pb.cc  bapid.pb.h  bapid_mock.grpc.pb.h
src/tests/: BUILD.bazel  arrow_test.cpp  test_lib.py  test_main.py
toolchain/: BUILD  cc_toolchain_config.bzl
