load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

cc_binary(
    name = "bapid",
    srcs = ["main.cpp"],
    deps = [
      "//src:bapid",
    ],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
      "//:bapid": "",
    },
)
