load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_compile")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "if",
  srcs = ["bapid.proto"]
)

cpp_grpc_compile(
  name = "rpc",
  protos = [":if"],
)

cc_library(
  name = "rpc_lib",
  srcs = ["rpc"],
  includes = ["rpc"],
)

cc_binary(
  name = "rpc_greeter",
  srcs = ["main.cpp"],
  deps = [":rpc_lib"],
)
