load("@rules_cc//cc:defs.bzl", "cc_binary")
package(default_visibility = ["//visibility:public"])

cc_library(
  name = "http",
  srcs = ["http_server.cpp"],
  hdrs = ["http_server.h"],
  deps = [
      "@libkj//:libkj_http",
  ]
)

cc_library(
  name = "rpc",
  srcs = ["bapid_server.cpp"],
  hdrs = ["bapid_server.h"],
  deps = [
    "//if:rpc_lib",
    "//src/common:rpc",
  ]
)


cc_library(
  name = "bapid",
  srcs = ["bapid.cpp"],
  hdrs = ["bapid.h"],
  deps = [
    ":rpc",
    ":http",
  ]
)

cc_library(
  name = "main",
  srcs = ["bapid_main.cpp"],
  hdrs = ["bapid_main.h"],
  deps = [":bapid"]
)

